@@ -3,6 +3,9 @@
 	Changed :filter command to accept pattern (//, ////, {} or {{}}).  Thanks
 	to rbong.
 
+	Improved parsing of optional numbers in vifminfo.  Thanks to Aris
+	Fergadis (a.k.a. afergadis).
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
